<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".journey.activity.ShowJourneyActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:layout_marginRight="30dp"
        android:layout_marginLeft="30dp"
        android:layout_weight="1">

        <TextView
            android:id="@+id/route"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="40dp"
            android:textStyle="bold"
            android:textAlignment="center"
            android:layout_margin="20dp"/>

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp">
        </ImageView>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="10dp">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="20dp"
                android:textStyle="bold"
                android:text="@string/distance" />

            <TextView
                android:id="@+id/distance"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textSize="20dp"
                android:layout_weight="1" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="10dp">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="20dp"
                android:textStyle="bold"
                android:text="@string/duration" />

            <TextView
                android:id="@+id/duration"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textSize="20dp"
                android:layout_weight="1" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="10dp">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="20dp"
                android:textStyle="bold"
                android:text="@string/altitude" />

            <TextView
                android:id="@+id/altitude"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textSize="20dp"
                android:layout_weight="1" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="10dp">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="20dp"
                android:textStyle="bold"
                android:text="@string/points" />

            <TextView
                android:id="@+id/points"
                android:layout_width="0dp"
                android:textSize="20dp"
                android:layout_height="wrap_content"
                android:layout_weight="1" />
        </LinearLayout>
    </LinearLayout>

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:menu="@menu/bottom_nav_menu"
        style="@style/Widget.App.BottomNavigationView"/>

</LinearLayout>
